<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/recipe_add"
        android:icon="@drawable/ic_add_top"
        android:title="AddRecipe"
        app:showAsAction = "ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/filter1"
        android:title="Sort by: Title"
        app:showAsAction = "never"
        tools:ignore="HardcodedText">

        <menu>
            <item
                android:id="@+id/titleFilter1"
                android:title="Ascending(A-Z)"
                tools:ignore="HardcodedText" />
            <item
                android:id="@+id/titleFilter2"
                android:title="Descending(Z-A)"/>

        </menu>
    </item>

    <item
        android:id="@+id/filter2"
        android:title="Sort by: Preparation Time"
        app:showAsAction = "never"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/timeFilter1"
                android:title="Quick-Long"/>
            <item
                android:id="@+id/timeFilter2"
                android:title="Long-Quick"/>

        </menu>
    </item>
    <item
        android:id="@+id/filter3"
        android:title="Sort by: Number of Servings"
        app:showAsAction = "never"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/serveFilter1"
                android:title="Low-High"/>
            <item
                android:id="@+id/serveFilter2"
                android:title="High-Low"/>

        </menu>
    </item>
    <item
        android:id="@+id/filter4"
        android:title="Sort by: Category"
        app:showAsAction = "never"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/categoryFilter1"
                android:title="Ascending(A-Z)"/>
...
